HTML e CSS componente Home.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>Help Desk</mat-card-title>
+      <mat-card-subtitle>Controle de Chamados</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="assets/img/home-image.svg" alt="Imagem Help desk">
+    <mat-card-content>
+      <p>
+        Olá! Seja bem vindo ao sistema de Help Desk.
+      </p>
+    </mat-card-content>
+  </mat-card>
+  
