--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -4,37 +4,53 @@
         <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Criação de técnico">
 
         <section class="section">
-            <mat-checkbox class="margin">Admin</mat-checkbox>
-            <mat-checkbox class="margin">Cliente</mat-checkbox>
-            <mat-checkbox class="margin">Técnico</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Admin</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Cliente</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Técnico</mat-checkbox>
         </section>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Nome</mat-label>
-            <input matInput placeholder="Ex. João Gomes">
+            <input 
+                [formControl]="nome"
+                required
+                matInput 
+                placeholder="Ex. João Gomes"
+                maxlength="50">
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Cpf</mat-label>
-            <input matInput placeholder="Ex. 000.000.000-00">
+            <input 
+                [formControl]="cpf"
+                required
+                matInput 
+                placeholder="Ex. 000.000.000-00"
+                mask="000.000.000-00">
             <mat-icon matSuffix>pin</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>E-mail</mat-label>
-            <input matInput placeholder="joao@mail.com">
+            <input 
+                [formControl]="email"
+                required
+                matInput placeholder="joao@mail.com">
             <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Senha</mat-label>
-            <input type="password" matInput placeholder="123456">
+            <input 
+                [formControl]="senha"
+                required
+                type="password" matInput placeholder="123456">
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
-        <button class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+        <button [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
+        <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     </form>
 </div>
