--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.css
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.css
@@ -20,3 +20,11 @@ table {
     text-align: center;
     margin-bottom: 2rem;
   }
+
+  .edit{
+    color: rgb(45, 131, 243);
+  }
+
+  .delete{
+    color: red;
+  }
