--- a/src/app/components/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/components/cliente/cliente-delete/cliente-delete.component.html
@@ -1,18 +1,18 @@
 <div class="container mat-elevation-z8">
     <form class="form">
-        <h1 class="fullWidth">Deletar Técnico</h1>
-        <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Criação de técnico">
+        <h1 class="fullWidth">Deletar Cliente</h1>
+        <img class="fullWidth" src="assets/img/cliente-create.svg" alt="Criação de cliente">
 
         <section class="section">
             <mat-checkbox [disabled]="true" class="margin" color="primary">Admin</mat-checkbox>
             <mat-checkbox [disabled]="true" class="margin" color="primary">Cliente</mat-checkbox>
-            <mat-checkbox [disabled]="true" class="margin" color="primary">Técnico</mat-checkbox>
+            <mat-checkbox [disabled]="true" class="margin" color="primary">Cliente</mat-checkbox>
         </section>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Nome</mat-label>
             <input 
-                [(ngModel)]="tecnico.nome"
+                [(ngModel)]="cliente.nome"
                 name="nome"
                 [disabled]="true"
                 matInput>
@@ -22,7 +22,7 @@
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Cpf</mat-label>
             <input 
-                [(ngModel)]="tecnico.cpf"
+                [(ngModel)]="cliente.cpf"
                 name="cpf"
                 [disabled]="true"
                 matInput>
@@ -32,7 +32,7 @@
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>E-mail</mat-label>
             <input 
-                [(ngModel)]="tecnico.email"
+                [(ngModel)]="cliente.email"
                 name="email"
                 [disabled]="true"
                 matInput>
@@ -42,7 +42,7 @@
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Senha</mat-label>
             <input 
-                [(ngModel)]="tecnico.senha"
+                [(ngModel)]="cliente.senha"
                 name="senha"
                 [disabled]="true"
                 matInput
