--- a/src/app/components/chamados/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamados/chamado-list/chamado-list.component.html
@@ -2,7 +2,7 @@
 
     <h1>Listando Chamados</h1>
 
-    <button class="mat-elevation-z8" mat-raised-button color="primary">Novo chamado</button>
+    <button routerLink="create" class="mat-elevation-z8" mat-raised-button color="primary">Novo chamado</button>
 
     <mat-form-field>
       <mat-label>Filter</mat-label>
