--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -6,6 +6,8 @@
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Título do chamado</mat-label>
           <input 
+            [(ngModel)]="chamado.titulo"
+            name="titulo"
             [formControl]="titulo"
             required
             matInput placeholder="Ex. Trocar fonte de notebook.">
@@ -15,7 +17,10 @@
       <div class="status-prioridade">
         <mat-form-field appearance="outline">
             <mat-label>Selecione um status</mat-label>
-            <mat-select [formControl]="status" required>
+            <mat-select 
+              [(ngModel)]="chamado.status"
+              name="status"
+              [formControl]="status" required>
               <mat-option value="0">ABERTO</mat-option>
               <mat-option value="1">EM ANDAMENTO</mat-option>
               <mat-option value="2">ENCERRADO</mat-option>
@@ -23,7 +28,10 @@
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Selecione uma prioridade</mat-label>
-            <mat-select [formControl]="prioridade" required>
+            <mat-select 
+              [(ngModel)]="chamado.prioridade"
+              name="prioridade"
+              [formControl]="prioridade" required>
               <mat-option value="0">BAIXA</mat-option>
               <mat-option value="1">MÉDIA</mat-option>
               <mat-option value="2">ALTA</mat-option>
@@ -34,8 +42,11 @@
       <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um técnico</mat-label>
-            <mat-select [formControl]="tecnico" required>
-              <mat-option value="0">Kane San</mat-option>
+            <mat-select
+              [(ngModel)]="chamado.tecnico"
+              name="tecnico"
+              [formControl]="tecnico" required>
+              <mat-option *ngFor="let tec of tecnicos" value="{{ tec.id }}">{{ tec.nome }}</mat-option>
             </mat-select>
           </mat-form-field>
       </div>
@@ -43,8 +54,11 @@
       <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um cliente</mat-label>
-            <mat-select  [formControl]="cliente" required>
-              <mat-option value="0">Albert Einstein</mat-option>
+            <mat-select  
+              [(ngModel)]="chamado.cliente"
+              name="cliente"
+              [formControl]="cliente" required>
+              <mat-option *ngFor="let cli of clientes" value="{{ cli.id }}">{{ cli.nome }}</mat-option>
             </mat-select>
           </mat-form-field>
       </div>
@@ -52,11 +66,16 @@
       <form class="form">      
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Descrição do serviço...</mat-label>
-          <textarea [formControl]="descricao" required class="descricao" matInput placeholder="Ex. Trocar fonte do notebook..."></textarea>
+          <textarea 
+            [(ngModel)]="chamado.observacoes"
+            name="observacoes"
+            [formControl]="observacoes"
+            required 
+            class="observacoes" matInput placeholder="Ex. Trocar fonte do notebook..."></textarea>
         </mat-form-field>
       </form>
       
-      <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+      <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
       <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
 </div>
